# tusk

./: .gitignore  Cargo.toml  GOAL.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  clippy.toml  install.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  REPORT.md  harness.py
benchmarks/fixtures/large/: composer.json
benchmarks/fixtures/medium/: composer.json
benchmarks/fixtures/small/: composer.json
benchmarks/results/: large.json  medium.json  small.json
crates/tusk-autoload/: Cargo.toml
crates/tusk-autoload/src/: autoload_php.rs  classmap.rs  generator.rs  lib.rs  php_writer.rs
crates/tusk-autoload/tests/: generator.rs
crates/tusk-cli/: Cargo.toml
crates/tusk-cli/src/: cli.rs  commands.rs  lib.rs  main.rs  progress.rs  ui.rs
crates/tusk-cli/src/commands/: install.rs  remove.rs  require.rs  update.rs
crates/tusk-cli/tests/: install_e2e.rs
crates/tusk-installer/: Cargo.toml
crates/tusk-installer/src/: cache.rs  curl_downloader.rs  download.rs  extract.rs  installer.rs  lib.rs
crates/tusk-installer/tests/: installer.rs
crates/tusk-manifest/: Cargo.toml
crates/tusk-manifest/src/: composer_json.rs  composer_lock.rs  lib.rs
crates/tusk-manifest/tests/: composer_json.rs  composer_lock.rs
crates/tusk-registry/: Cargo.toml
crates/tusk-registry/src/: client.rs  curl_metadata.rs  lib.rs  mock.rs  model.rs  packagist.rs
crates/tusk-registry/tests/: mock_basic.rs  mock_concurrency.rs  p2_regressions.rs  packagist_construct.rs  parse_p2_regression.rs
crates/tusk-registry/tests/common/: mod.rs
crates/tusk-resolver/: Cargo.toml
crates/tusk-resolver/src/: adapter.rs  lib.rs  solver.rs
crates/tusk-resolver/tests/: parallel_fetch.rs  resolver.rs
crates/tusk-semver/: Cargo.toml
crates/tusk-semver/src/: constraint.rs  lib.rs  version.rs
crates/tusk-semver/tests/: constraint.rs  version.rs
docs/plans/: 2026-06-18-wave1-foundation.md
fixtures/manifest/: autoload-files.json  classmap-psr0.json  minimal.json  multipath-psr4.json  simple-lock.json
