[package]
name = "tusk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Tusk — a fast PHP toolchain in Rust (CLI binary)"

[lints]
workspace = true

[[bin]]
name = "tusk"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
sha1_smol = { workspace = true }
tusk-semver = { workspace = true }
tusk-manifest = { workspace = true }
tusk-registry = { workspace = true }
tusk-resolver = { workspace = true }
tusk-installer = { workspace = true }
tusk-autoload = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
wiremock = { workspace = true }
zip = { workspace = true }
sha1_smol = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
