[package]
name = "tusk-installer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Parallel dist download, shasum verify, atomic extract, content-addressed cache"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
sha1_smol = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
futures = "0.3"
curl = { workspace = true }
tusk-semver = { workspace = true }
tusk-manifest = { workspace = true }
tusk-registry = { workspace = true }
tusk-resolver = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
