[package]
name = "tusk-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "composer.json + composer.lock parse and serialize (Composer-compatible)"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
tusk-semver = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
