[package]
name = "tusk-semver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Composer-flavored semver: version + constraint grammar (the algorithmic heart of tusk)"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
pubgrub = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
